using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class PlayerAnimTrigger // 플레이어 Trigger 애니메이션 종류
{
    public const string Sad = "isSad";
    public const string Happy = "isHappy";
    public const string Jump = "isJump";
    public const string Hit = "isHit";

}
